src/main/kotlin/com/example/msproduct/errors/ProductNotAvailable.kt
package com.example.msproduct.errors

class ProductNotAvailable(override val message : String?) : RuntimeException(){
}